fix: add media query to fix issue with DataTables search input moving out of position on tablet-sized screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,13 @@ hr {
     }
 }
 
+/* Fix positioning for DataTables search bar on tablet only */
+@media (min-width: 767px) and (max-width: 1023px) {
+    #spell-list-table_wrapper>.row:first-child {
+        max-width: 30%;
+    }
+}
+
 /* Adjust BG Image positioning on larger screens */
 @media (min-width: 1440px) {
     .jumbotron {
